Fixed spacing issues of AllItems and MyAccount component

--- a/src/components/Contacts/ContactUs/ContactUs.css
+++ b/src/components/Contacts/ContactUs/ContactUs.css
@@ -1,7 +1,5 @@
 #contact-us-grid {
     margin-top: 6.25rem;
-    margin-bottom: 4.375rem;
-    font-family: 'Roboto', sans-serif;
 }
 
 .contact-us-card-background {
@@ -14,14 +12,9 @@
     align-items: center;
 }
 
-#leave-message {
-    font-family: 'Roboto', sans-serif;
-    margin-bottom: 4.375rem;
-}
-
 #leave-message h5 {
-    font-family: 'Oswald', sans-serif;
     color: #642F21;
+    font-weight: 500;
     font-size: 3.125rem;
-    padding: 1.5rem 0;
+    margin-bottom: 2rem;
 }
