--- a/src/components/Contacts/ReserveTable/ReserveTable.css
+++ b/src/components/Contacts/ReserveTable/ReserveTable.css
@@ -1,5 +1,4 @@
 #reserve-table-form {
-    font-family: 'Roboto', sans-serif;
     margin-top: 4.375rem;
     margin-bottom: 4.375rem;
 }
