--- a/src/components/Shop/MyAccount/MyAccount.css
+++ b/src/components/Shop/MyAccount/MyAccount.css
@@ -1,7 +1,3 @@
-#user-info {
-    font-family: 'Roboto', sans-serif;
-}
-
 .google-icon {
     margin: 1rem;
     font-size: 2rem;
